# Genotyper-Firmware

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile.dev  Makefile  Pipfile  README.md
.github/: dependabot.yml
.github/workflows/: lint-js.yml  lint-rs.yml  minimal.yml  slider-common-test.yml
PSOC/samples/LED_Blink.cydsn/: LED_Blink.rpt
PSOC/samples/LED_Blink.cydsn/Export/: PSoCCreatorExportIDE.xml
PSOC/samples/LED_Blink.cydsn/codegentemp/: LED_Blink.ctl  LED_Blink.cyfit  LED_Blink.pci  LED_Blink.pco  LED_Blink.sdc  LED_Blink.sdf  LED_Blink.v  LED_Blink.vh2  LED_Blink_p.vh2  LED_Blink_r.vh2  LED_Blink_t.vh2  LED_Blink_timing.html  LED_Blink_u.sdc  elab_dependencies.txt  generated_files.txt  project_ids.txt
cartridge-rm/: Cargo.toml
centrifuge-controller/: Cargo.toml
docs/: gcode.md
docs/sample_projects/psoc/samples/: Testing_workspace.cywrk
executor/: sample.yaml  workflow.py
firmware/: Cargo.toml  README.md
firmware/cartridge-rm/: Cargo.toml
firmware/centrifuge-controller/: Cargo.toml
firmware/gantry-controller/: Cargo.toml  README.md
firmware/gantry-controller/examples/: tokio.rs
firmware/gantry-controller/src/: lib.rs  serial.rs
firmware/gcode-queue/: Cargo.toml
firmware/gcode-queue/examples/: tokio.rs
firmware/gcode-queue/src/: lib.rs  serial.rs
firmware/sample-rm/: Cargo.toml
firmware/slider/: Cargo.toml  openocd.gdb
firmware/slider-common/: Cargo.toml
firmware/slider-common/examples/: simple.rs
firmware/slider-common/src/: lib.rs
firmware/slider-uc/: Cargo.toml  README.md
firmware/slider/.cargo/: config.toml
firmware/slider/src/: main.rs
firmware/tool-rm/: Cargo.toml
gantry-controller/: Cargo.toml  gantry.toml
gantry-controller/examples/: tokio.rs
gantry-controller/src/: gantry.rs  gcode.rs  lib.rs  serial.rs
genotyper/: Makefile  Pipfile  mypy.ini
genotyper/genotyper/: SimpleGCodeForSmoothie.py  __init__.py  config.py
genotyper/genotyper/commands/: type.py
genotyper/genotyper/configuration/: robot_config.py  smoothie_config.py  type.py
genotyper/genotyper/drivers/smoothie/: controller.py  type.py
genotyper/genotyper/util/: logging_config.py
genotyper/notebooks/: PriorityDecayQueue.ipynb  SimpleGCodeForSmoothie.ipynb  compute_layout.ipynb  gcode_queue.ipynb
genotyper/tests/genotyper/commands/: test_command_builder.py  test_type.py
hi-genie/: README.md  index.html  package.json
hi-genie/src/: App.tsx
hi-genie/src-tauri/: Cargo.toml  tauri.conf.json
langspec/: .env  Makefile  Pipfile  STASH.yaml  cli.py  node.py  nodelib.py  output.json  requirements.txt  spec.yaml
llama-btree/: Makefile  README.md  cli.py  node.py  node_list.txt  nodelib.py  nodelib.yaml  output.json  plot.py  requirements.txt
llama-btree/assets/: behavior_tree
llama-btree/llama-compiler/: Makefile  b_tree.json  cli.py  compile.py  new_cli.py  new_compile.py  observation.txt
meet-geno/: package.json  pnpm-lock.yaml
meet-geno/src-tauri/: Cargo.toml
mockze/: Cargo.toml
mockze/src/: main.rs
reagent-rm/: Cargo.toml
sample-rm/: Cargo.toml
scratch/genotyper/: .gitignore  Pipfile
scratch/genotyper/genotyper/: pyproject.toml
scratch/genotyper/genotyper/configuration/: __init__.py  error.py  robot_config.py
scratch/genotyper/genotyper/protocol/: __init__.py
scratch/genotyper/genotyper/util/: logging_config.py
scratch/genotyper/notebooks/: EDSerial.ipynb  PriorityDecayQueue.ipynb  SimpleGCodeForSmoothie.ipynb  compute_layout_v2.ipynb  modules.ipynb  robot-context.ipynb  robot.ipynb
scratch/services/detector/: README.md
scratch/services/detector/eSNP_detector/: package.xml
scripts/: init.sh
scripts/config/: README.md  sync.py
scripts/config_gitpoll/: .env.sample  Dockerfile  Makefile  README.md  gitpoll_daemon.py  gitpoll_foreground.py  requirements.txt
scripts/config_gitpoll/gitpoll/: gitpoll.py  test_gitpoll.py
services/detector/eSNP_detector/: setup.cfg  setup.py
simulator/: Makefile  README.txt  incomming_swabs.py  liquid_handler.py  robot.yaml
simulator/gensi/: formats.py
slider-common/examples/: simple.rs
slider-driver/: Cargo.toml
slider-driver/examples/: simple-slider.rs
slider-driver/src/: lib.rs
slider-uc/: .embed.toml  Cargo.toml
src/slider-common/src/: toggle.rs
tip-rm/: Cargo.toml
tool-rm/: Cargo.toml
tools/faker/: Pipfile  main.py
workflow/: Cargo.toml  Makefile  README.md  \
workflow/examples/: simple-workflow.rs
workflow/src/: conf.rs  lib.rs
workflow/tests/: binaries_test.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+41 files in other folders)
