[package]
name = "gantry-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
log = "0.4.14"
bytes = "1.0.1"
futures = "0.3.17"
tokio = { version = "1.24.2", features = ["full"] }
bincode = "1.3.3"
tokio-util = "0.7.4"
tokio-serial = "5.4.4"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
slider-common = { path = "../slider-common" }

[lib]
crate-type = ["lib"]
