[package]
name = "mockze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
workflow = { path = "../workflow" }
simplelog = "0.12.1"
log = { version = "0.4.17", features = ["std", "release_max_level_info"]}
semver = "1.0.17"

