[package]
authors = ["Technoculture Research"]
edition = "2021"
readme = "README.md"
name = "slider-uc"
version = "0.1.0"
publish = false

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
embedded-hal = "0.2.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stepper = "0.6.0"
fixed = "1.21.0"
typenum = "1.16.0"
# fugit-timer = "0.1.3"
# stepper-driver = "0.1.0"
slider-driver = { path = "../slider-driver" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["rt", "stm32f401", "defmt"]

[dependencies.num-traits]
default-features = false

# this lets you use `cargo fix`!
# [[bin]]
# name = "slider"
# test = false
# bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

