[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dirs = "5.0.0"
futures = "0.3.28"
log = { version = "0.4.17", features = ["std", "release_max_level_warn"]}
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
simplelog = "0.12.1"

[[bin]]
name = "proto"
path = "bin/proto1.rs"

[[bin]]
name = "nodes"
path = "bin/nodes.rs"
