[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.2.4", features = ["derive"] }
dirs = "5.0.0"
format_serde_error = "0.3.0"
futures = "0.3.28"
log = { version = "0.4.17", features = ["std", "release_max_level_info"]}
semver = "1.0.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
simplelog = "0.12.1"

[lib]
name = "workflow"
path = "src/lib.rs"

[[bin]]
name = "parse"
path = "bin/parse.rs"

[[bin]]
name = "executor"
path = "bin/executor.rs"
